[gd_scene load_steps=7 format=3 uid="uid://dy54o873rsjys"]

[ext_resource type="PackedScene" uid="uid://orrylwy00mj5" path="res://scenes/characters/character.tscn" id="1_cita8"]
[ext_resource type="Script" path="res://scenes/characters/mage.gd" id="2_4tbp4"]
[ext_resource type="Texture2D" uid="uid://bxoxir7vh7rw0" path="res://resources/images/staff.svg" id="2_ph0da"]
[ext_resource type="Texture2D" uid="uid://cu0ysvnvq8b0r" path="res://resources/images/mage_hat.svg" id="3_ft66y"]
[ext_resource type="PackedScene" uid="uid://dwt7s2pmjupnb" path="res://scenes/characters/ai/movement_ai.tscn" id="4_m7n5q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a53oq"]

[node name="Mage" instance=ExtResource("1_cita8")]
script = ExtResource("2_4tbp4")
origin_damage = 2
accelerated_damage = 4.0

[node name="Hurtbox" parent="." index="0"]
health = 80

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_a53oq")

[node name="LaserOrigin" type="Marker2D" parent="CharacterSprite" index="3"]
unique_name_in_owner = true
position = Vector2(10, -10)
scale = Vector2(0.195, 0.195)

[node name="Staff" type="Sprite2D" parent="CharacterSprite" index="4"]
position = Vector2(13, -3)
rotation = 0.380482
scale = Vector2(0.195, 0.195)
texture = ExtResource("2_ph0da")

[node name="MovementAI" parent="." index="3" node_paths=PackedStringArray("character") instance=ExtResource("4_m7n5q")]
target_distance_min = 64.0
target_distance_max = 160.0
move_speed = 48.0
attack_wait = 0.2
attacking_speed_multiple = 0.1
character = NodePath("..")

[node name="MageHat" type="Sprite2D" parent="." index="4"]
position = Vector2(1, -16)
scale = Vector2(0.245, 0.245)
texture = ExtResource("3_ft66y")

[node name="Laser" type="Line2D" parent="." index="5"]
points = PackedVector2Array(10, -10, 10, -10)
width = 5.0
default_color = Color(1, 1, 1, 0.509804)

[connection signal="target_changed" from="." to="." method="_on_target_changed"]
[connection signal="attack" from="MovementAI" to="." method="_on_movement_ai_attack"]
[connection signal="attacking_began" from="MovementAI" to="." method="_on_movement_ai_attacking_began"]
